[package]
name = "dsql-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-config = "1"
aws-sdk-dsql = "1"
aws-sdk-cloudwatch = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio-retry = "0.3.0"
anyhow = { version = "1.0.98", features = ["backtrace"] }
hdrhistogram = "7.5"
chrono = "0.4"
serde_json = "1.0"
byte-unit = "5.1.6"
ratatui = "0.29"
crossterm = "0.28"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
postgres-native-tls = "0.5.1"
tokio-postgres = "0.7.13"
native-tls = { version = "0.2.14", features = ["alpn"] }
async-trait = "0.1.88"
